# Mermaid-Diagram-Editor

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.mcp  FROM_SCRATCH_PROMPT.md  README.md  docker-compose.yml  export_options.json  nginx.conf  pyproject.toml
.cursor/: mcp.json
.github/workflows/: ci.yml
docs/: mcp-server.md
examples/: invalid.mmd  sample.mmd
src/mermaid_diagram/: __init__.py  background.py  cli.py  history.py  mcp_server.py  options.py  render.py
tests/: conftest.py  test_build.py  test_cli.py  test_docker.py  test_integration.py  test_mcp.py  test_mcp_docker.py  test_web_docker.py  test_web_e2e.py  test_web_local.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/components/: BackgroundControl.tsx  EditorPane.tsx  ExportDialog.tsx  HistoryPanel.tsx  PreviewPane.tsx  Toolbar.tsx
web/src/hooks/: useHistory.ts  useMermaid.ts
web/src/lib/: background.ts  defaultDiagram.ts  downloadSource.ts  exportDiagram.ts  exportOptions.ts  history.ts  monacoSetup.ts
web/src/styles/: app.css
